syntax = "proto3";

package spike;

option java_package = "io.pixelsdb.pixels.spike.handler";
option java_outer_classname = "SpikeServiceProto";
option go_package = "github.com/AgentGuo/spike/api";

// The spike service definition.
service SpikeService {
  // Calls a function.
  rpc CallFunction(CallFunctionRequest) returns (CallFunctionResponse);

  // Adds a new function.
  rpc CreateFunction(CreateFunctionRequest) returns (CreateFunctionResponse);

  // Deletes an existing function.
  rpc DeleteFunction(DeleteFunctionRequest) returns (DeleteFunctionResponse);

  rpc GetAllFunctions(Empty) returns (GetAllFunctionsResponse);

  rpc GetFunctionResources(GetFunctionResourcesRequest) returns (GetFunctionResourcesResponse);

  rpc ScaleFunction(ScaleFunctionRequest) returns (Empty);
}

message Empty {}

message FunctionMetaData{
  string function_name = 1;
  string image_url = 2;
  repeated ResourceSpec resources = 3;
}

message GetAllFunctionsResponse{
  repeated FunctionMetaData functions = 1;
}

message ScaleFunctionRequest{
  string function_name = 1;
  int32 cpu = 2;
  int32 memory = 3;
  int32 scale_cnt = 4;
}

// The request message containing the function name and input.
message CallFunctionRequest {
  string function_name = 1;
  string payload = 2;
  int32 cpu = 3;
  int32 memory = 4;
}

// The response message containing the function output.
message CallFunctionResponse {
  string payload = 1;
  int32 error_code = 2;
}

message ResourceSpec{
  int32 cpu = 1;
  int32 memory = 2;
  int32 min_replica = 3;
  int32 max_replica = 4;
}

// The request message for adding a new function.
message CreateFunctionRequest {
  string function_name = 1;
  string image_url = 2;
  repeated ResourceSpec resources = 3;
}

// The response message for adding a new function.
message CreateFunctionResponse {
  int32 code = 1;
  string message = 2;
}

// The request message for deleting a function.
message DeleteFunctionRequest {
  string function_name = 1;
}

// The response message for deleting a function.
message DeleteFunctionResponse {
  int32 code = 1;
  string message = 2;
}

// The request message for updating a new function.
message UpdateFunctionRequest {
  string function_name = 1;
  string task_name = 2;
  string task_version = 3;
  bool enable_auto_scaling = 4;
}

// The response message for updating a new function.
message UpdateFunctionResponse {
  int32 code = 1;
  string message = 2;
}

message UpdateFuncInstanceRequest {
  string function_name = 1;
  int32 cpu_num = 2;
  int32 memory_size = 3;
  int32 instance_num = 4;
}

message UpdateFuncInstanceResponse {
  int32 code = 1;
  string message = 2;
}

message GetFunctionResourcesRequest{
  string function_name = 1;
}

message ResourceStatus{
  string ipv4 = 1;
  int32 cpu = 2;
  int32 memory = 3;
  string launch_type = 4;
  string last_status = 5;
  string desired_status = 6;
}

message GetFunctionResourcesResponse{
  string function_name = 1;
  repeated ResourceStatus resources = 2;
}
